--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "project",
     "license": "MIT",
     "support": {
-        "issues": "https://github.com/",
-        "source": "https://github.com/"
+        "issues": "https://github.com/aasumitro/dms-starter-kit",
+        "source": "https://github.com/aasumitro/dms-starter-kit"
     },
     "authors": [
         {
